; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_standby.c_SendRecoveryConflictWithBufferPin.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_standby.c_SendRecoveryConflictWithBufferPin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROCSIG_RECOVERY_CONFLICT_BUFFERPIN = common dso_local global i64 0, align 8
@PROCSIG_RECOVERY_CONFLICT_STARTUP_DEADLOCK = common dso_local global i64 0, align 8
@InvalidOid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @SendRecoveryConflictWithBufferPin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SendRecoveryConflictWithBufferPin(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @PROCSIG_RECOVERY_CONFLICT_BUFFERPIN, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @PROCSIG_RECOVERY_CONFLICT_STARTUP_DEADLOCK, align 8
  %9 = icmp eq i64 %7, %8
  br label %10

10:                                               ; preds = %6, %1
  %11 = phi i1 [ true, %1 ], [ %9, %6 ]
  %12 = zext i1 %11 to i32
  %13 = call i32 @Assert(i32 %12)
  %14 = load i32, i32* @InvalidOid, align 4
  %15 = load i64, i64* %2, align 8
  %16 = call i32 @CancelDBBackends(i32 %14, i64 %15, i32 0)
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @CancelDBBackends(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
